contenido sobre nosotros

--- a/acerca.html
+++ b/acerca.html
@@ -30,6 +30,10 @@
 		  </div>
 		</div>
 	  </div>
+	  <div class="content">
+		  <h2>quienes somos</h2>
+		  <p>somos una productora audiovisual que radica en la ciudad de buenaventura, valle del cauca en colombia, esta empresa surge con el fin de dar solucion a las necesidades de los diferentes sectores en la parte audiovisual y que su material visual sea de la mejor calidad</p>
+	  </div>
 
 	<section class="ceo">
 		<div class="info">
